--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
+  "type": "module",
   "author": "Jonasz Bigda",
   "license": "ISC",
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "esm": "^3.2.25",
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "gitignore": "^0.6.0",
