--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/core": "^4.11.0",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -21,6 +22,7 @@
     "express-rate-limit": "^5.1.3",
     "gitignore": "^0.6.0",
     "helmet": "^3.23.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
