--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "Jonasz Bigda",
   "license": "ISC",
   "dependencies": {
+    "@azure/storage-blob": "^12.2.0-preview.1",
     "@material-ui/core": "^4.11.0",
     "agile_crm": "^1.2.5",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
@@ -23,12 +23,12 @@
     "express-rate-limit": "^5.1.3",
     "gitignore": "^0.6.0",
     "helmet": "^3.23.3",
+    "into-stream": "^6.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.22",
     "multer": "^1.4.2",
     "nodemon": "^2.0.4",
     "string-sanitizer": "^1.1.1",
-    "translate": "^1.1.2",
     "validator": "^13.1.1"
   }
 }
