--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "type": "module",
@@ -30,5 +30,11 @@
     "nodemon": "^2.0.4",
     "string-sanitizer": "^1.1.1",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
+    "babel-jest": "^26.3.0",
+    "babel-polyfill": "^6.26.0",
+    "jest": "^26.4.0"
   }
 }
