--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@azure/storage-blob": "^12.2.0-preview.1",
     "aws-sdk": "^2.789.0",
-    "axios": "^0.20.0",
+    "axios": "^0.21.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie": "^0.4.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "esm": "^3.2.25",
     "express": "^4.17.1",
@@ -29,7 +30,7 @@
     "multer": "^1.4.2",
     "multer-s3": "^2.9.0",
     "nodemailer": "^6.4.11",
-    "nodemon": "^2.0.4",
+    "nodemon": "^2.0.7",
     "string-sanitizer": "^1.1.1",
     "validator": "^13.1.1"
   },
